adding some elements

--- a/index.html
+++ b/index.html
@@ -324,7 +324,94 @@
         <!-- /.product-cards -->
       </div>
       <!-- /.products -->
-
+      <div class="business container">
+        <div class="row">
+          <div class="col-6">
+            <img src="/images/img/business.png" alt="Photo: business" class="business-image">
+          </div>
+          <!-- /.col-6 -->
+          <div class="col-6">
+            <div class="business-content">
+              <div class="business-title">Бизнес с Jazz-Holding</div>
+              <p class="business-text">Сбалансируйте все сферы своей жизни став активным потребителем Jazz-Holding! Здоровый напитки, эко-продукты, органические продукты и возможность зарабатывать кэшбэк за рекомендацию нашего STORE.</p>
+              <div class="business-tips">
+                <div class="business-tip">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="tip-image">
+                  <div class="tip-text">Рекомендуйте эко-продукты своим друзьям и знакомым и зарабатывайте с каждой покупки</div>
+                </div>
+                <!-- /.business-tip -->
+                <div class="business-tip">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="tip-image">
+                  <div class="tip-text">Участвуйте в программах Jazz STORE и получайте авто, квартиру и другие ценные подарки</div>
+                </div>
+                <!-- /.business-tip -->
+                <div class="business-tip">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="tip-image">
+                  <div class="tip-text">Самых активных и вовлеченных мы награждаем денежными премиями</div>
+                </div>
+                <!-- /.business-tip -->
+                <div class="business-tip">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="tip-image">
+                  <div class="tip-text">Обучайтесь, заводите полезные знакомства и становитесь экспертом наших брендов</div>
+                </div>
+                <!-- /.business-tip -->
+                <div class="business-tip">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="tip-image">
+                  <div class="tip-text">Наслаждайтесь жизнью, путешествуйте и поддерживайте здоровый образ жизни вместе с Jazz-Holding!</div>
+                </div>
+                <!-- /.business-tip -->
+              </div>
+              <!-- /.business-tips -->
+            </div>
+            <!-- /.business-content -->
+          </div>
+          <!-- /.col-6 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.business -->
+      <div class="success second-section-yellow">
+        <div class="container">
+        <div class="success-title">Три шага на пути к успеху</div>
+          <div class="success-cards">
+            <div class="row">
+              <div class="col-4">
+                <div class="success-card">
+                  <img src="/images/img/success-icon-1.svg" alt="Icon: Success-icon" class="success-icon">
+                  <p class="success-text">Совершайте любые покупки в Jazz-Holding со скидкой</p>
+                  <span class="order-num">01</span>
+                </div>
+                <!-- /.success-card -->    
+              </div>
+              <!-- /.col-4 -->
+              <div class="col-4">
+                <div class="success-card">
+                  <img src="/images/img/success-icon-2.svg" alt="Icon: Success-icon" class="success-icon">
+                  <p class="success-text">Рекомендуйте Jazz-Holding, создавая личную команду активных потребителей</p>
+                  <span class="order-num">02</span>
+                </div>
+                <!-- /.success-card -->
+              </div>
+              <!-- /.col-4 -->
+              <div class="col-4">
+                <div class="success-card">
+                  <img src="/images/img/success-icon-3.svg" alt="Icon: Success-icon" class="success-icon">
+                  <p class="success-text">Станьте Экспертом бренда, получая пассивный доход и щедрые подарки
+                  </p>
+                  <span class="order-num">03</span>
+                </div>
+                <!-- /.success-card -->
+              </div>
+              <!-- /.col-4 -->
+            </div>
+            <!-- /.row -->
+          </div>
+          <!-- /.succecc-cards -->
+          <a href="#" class="success-link primary-link">Зарегистрироваться</a>
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.success section-yellow -->
     </main>
    </div>
    <!-- /.page-root -->
