--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               </a>
               <a href = "#" class="cart-link">
                 <img src="/images/img/cart.svg" alt="Icon: Cart" class="cart-icon">
+                <span class="products-num">3</span>
               </a>
             </div>
             <!-- /.link-group -->
@@ -95,66 +96,76 @@
       <section class="brands container">
         <h2 class="brand-title">Мы создаем бренды!</h2>
         <div class="brand-cards">
-          <div class="brand-card">
-            <div class="brand-card-header">
-              <img src="/images/img/brand-card-image-1.png" alt="Brand-Card-Image-1" class="brand-card-image">
-            </div>
-            <!-- /.brand-card-header -->
-            <div class="brand-card-info">
-              <div class="brand-card-title">JazzLife</div>
-              <p class="brand-card-text">Собственное производство экологичных продуктов для дома</p>
-              <div class="brand-cards-benefits">
-                <div class="brand-card-benefit">
-                  <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="brand-card-icon">
-                  <span class="brand-icon-text">Органический состав</span>
+          <div class="row">
+            <div class="col-6">
+              <div class="brand-card">
+                <div class="brand-card-header">
+                  <img src="/images/img/brand-card-image-1.png" alt="Brand-Card-Image-1" class="brand-card-image">
                 </div>
-                <div class="brand-card-benefit">
-                  <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="brand-card-icon">
-                  <span class="brand-icon-text">Эффективная формула</span>
+                <!-- /.brand-card-header -->
+                <div class="brand-card-info">
+                  <div class="brand-card-title">JazzLife</div>
+                  <p class="brand-card-text">Собственное производство экологичных продуктов для дома</p>
+                  <div class="brand-cards-benefits">
+                    <div class="brand-card-benefit">
+                      <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="brand-card-icon">
+                      <span class="brand-icon-text">Органический состав</span>
+                    </div>
+                    <div class="brand-card-benefit">
+                      <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="brand-card-icon">
+                      <span class="brand-icon-text">Эффективная формула</span>
+                    </div>
+                    <div class="brand-card-benefit">
+                      <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="brand-card-icon">
+                      <span class="brand-icon-text">Европейское качество</span>
+                    </div>
+                  </div>
+                  <!-- /.brand-cards-benefits -->
                 </div>
-                <div class="brand-card-benefit">
-                  <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="brand-card-icon">
-                  <span class="brand-icon-text">Европейское качество</span>
-                </div>
+                <!-- /.brand-card-info -->
+                <a href="#" class="brand-card-link primary-link">
+                  Перейти в магазин
+                </a>
               </div>
-              <!-- /.brand-cards-benefits -->
+              <!-- /.brand-card -->
             </div>
-            <!-- /.brand-card-info -->
-            <a href="#" class="brand-card-link primary-link">
-              Перейти в магазин
-            </a>
-          </div>
-          <!-- /.brand-card -->
-          <div class="brand-card">
-            <div class="brand-card-header">
-              <img src="/images/img/brand-card-image-2.png" alt="Brand-Card-Image-1" class="brand-card-image">
-            </div>
-            <!-- /.brand-card-header -->
-            <div class="brand-card-info">
-              <div class="brand-card-title">JazzTop</div>
-              <p class="brand-card-text">Создаем эко-продукты для полноценного питания, здоровья и красоты</p>
-              <div class="brand-cards-benefits">
-                <div class="brand-card-benefit">
-                  <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="brand-card-icon">
-                  <span class="brand-icon-text">Органический состав</span>
+            <!-- /.col-6 -->
+            <div class="col-6">
+              <div class="brand-card">
+                <div class="brand-card-header">
+                  <img src="/images/img/brand-card-image-2.png" alt="Brand-Card-Image-1" class="brand-card-image">
                 </div>
-                <div class="brand-card-benefit">
-                  <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="brand-card-icon">
-                  <span class="brand-icon-text">Эффективная формула</span>
+                <!-- /.brand-card-header -->
+                <div class="brand-card-info">
+                  <div class="brand-card-title">JazzTop</div>
+                  <p class="brand-card-text">Создаем эко-продукты для полноценного питания, здоровья и красоты</p>
+                  <div class="brand-cards-benefits">
+                    <div class="brand-card-benefit">
+                      <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="brand-card-icon">
+                      <span class="brand-icon-text">Органический состав</span>
+                    </div>
+                    <div class="brand-card-benefit">
+                      <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="brand-card-icon">
+                      <span class="brand-icon-text">Эффективная формула</span>
+                    </div>
+                    <div class="brand-card-benefit">
+                      <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="brand-card-icon">
+                      <span class="brand-icon-text">Европейское качество</span>
+                    </div>
+                  </div>
+                  <!-- /.brand-cards-benefits -->
                 </div>
-                <div class="brand-card-benefit">
-                  <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="brand-card-icon">
-                  <span class="brand-icon-text">Европейское качество</span>
-                </div>
+                <!-- /.brand-card-info -->
+                <a href="#" class="brand-card-link primary-link">
+                  Перейти в магазин
+                </a>
               </div>
-              <!-- /.brand-cards-benefits -->
+              <!-- /.brand-card -->
             </div>
-            <!-- /.brand-card-info -->
-            <a href="#" class="brand-card-link primary-link">
-              Перейти в магазин
-            </a>
+            <!-- /.col-6 -->
           </div>
-          <!-- /.brand-card -->
+          <!-- /.row -->
+          
         </div>
         <!-- /.brand-cards -->           
       </section>
@@ -203,8 +214,8 @@
         <!-- /.row -->
       </section>
       <!-- /.promotion -->  
+      <div class="products-title">Наша продукция</div>  
       <div class="products container">
-        <div class="products-title">Наша продукция</div>  
         <div class="product-cards">
           <div class="row">
             <div class="col-4">
@@ -327,7 +338,9 @@
       <div class="business container">
         <div class="row">
           <div class="col-6">
-            <img src="/images/img/business.png" alt="Photo: business" class="business-image">
+            <div style="display:flex; justify-content: flex-end;">
+              <img src="/images/img/business.png" alt="Photo: business" class="business-image">
+            </div>
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
