--- a/index.html
+++ b/index.html
@@ -425,7 +425,157 @@
         <!-- /.container -->
       </div>
       <!-- /.success section-yellow -->
+      <div class="reliability container">
+        <div class="reliability-title">Строить бизнес с Jazz-Holding не только престижно, но и надежно!</div>
+        <div class="reliability-subtitle">Благодаря использованию блокчейн-платформы, мы позаботились о том, чтобы каждый наш партнер получил обещанные вознаграждения!</div>
+        <div class="reliability-cards">
+          <div class="row">
+            <div class="col-4">
+              <div class="reliability-card reliability-card-left">
+                <div class="reliability-card-text">Сохранность и неизменность
+                  внесенной информации</div>
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="reliability-icon">
+              </div>
+              <!-- /.reliability-card -->
+              <div class="reliability-card reliability-card-left">
+                <div class="reliability-card-text">Высокая скорость
+                  финансовых операций</div>
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="reliability-icon">
+              </div>
+              <!-- /.reliability-card -->
+            </div>
+            <!-- /.col-4 -->
+            <div class="col-4">
+              <img src="images/img/logo-lg.png" alt="Logo: Jazz" class="logo-lg">
+              <div class="reliability-card reliability-card-right">
+                <div class="reliability-card-text order-2">Защита от любых мошеннических действий</div>
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="reliability-icon order-1">
+              </div>
+              <!-- /.reliability-card -->
+              <a href="#" class="reliability-link primary-link">Присоединиться</a>
+            </div>
+            <!-- /.col-4 -->
+            <div class="col-4">
+              <div class="reliability-card reliability-card-right">
+                <div class="reliability-card-text order-2">Исполнение всех
+                  обязательств и выплат</div>
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="reliability-icon order-1">
+              </div>
+              <!-- /.reliability-card -->
+              <div class="reliability-card reliability-card-right">
+                <div class="reliability-card-text order-2">Полная прозрачность
+                  транзакций</div>
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="reliability-icon order-1">
+              </div>
+              <!-- /.reliability-card -->
+            </div>
+            <!-- /.col-4 -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.reliability-cards -->
+      </div>
+      <!-- /.reliability -->
+      <div class="news container">
+        <div class="news-title">Последние новости</div>
+        <div class="news-cards">
+          <div class="row">
+            <div class="col-4">
+              <img src="/images/img/news-image-1.png" alt="News-imaage-1" class="news-image">
+              <div class="news-date">29 Ноября 2020г</div>
+              <div class="news-text">Лучшие кофейные открытия Москвы в ноябре</div>
+            </div>
+            <!-- /.col-4 -->
+            <div class="col-4">
+              <img src="/images/img/news-image-2.png" alt="News-imaage-2" class="news-image">
+              <div class="news-date">29 Ноября 2020г</div>
+              <div class="news-text">Интервью с Шота Битадзе: всё о грузинском фермерском чае</div>
+              <a href="#" class="news-link primary-link">Все новости</a>
+            </div>
+            <!-- /.col-4 -->
+            <div class="col-4">
+              <img src="/images/img/news-image-3.png" alt="News-imaage-3" class="news-image">
+              <div class="news-date">29 Ноября 2020г</div>
+              <div class="news-text">Объявлены Чемпионаты мира по кофе, которые состоятся на Тайване</div>
+            </div>
+            <!-- /.col-4 -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.news-cards -->
+      </div>
+      <!-- /.news -->
     </main>
+    <footer class="footer">
+      <div class="container footer-content">
+      <div class="row">
+        <div class="col-2">
+          <div class="footer-logo">
+            <a href="/" class="logo"><img src="/images/img/logo-footer.png" alt="Logo: Jazz" class="footer-logo-image"></a>
+            <div class="footer-logo-text">Jazz STORE - </br>Все лучшее людям!</div>
+          </div>
+          <!-- /.footer-logo -->
+        </div>
+        <!-- /.col-2 -->
+        <div class="col-5">
+          <div class="footer-information">
+            <ul label="Информация" class="information">
+              <li class="information-item"><a href="#" class="information-link">О нас</a></li>
+              <li class="information-item"><a href="#" class="information-link">О продукции</a></li>
+              <li class="information-item"><a href="#" class="information-link">Новости</a></li>
+              <li class="information-item"><a href="#" class="information-link">Магазин</a></li>
+              <li class="information-item"><a href="#" class="information-link">Бизнес</a></li>
+            </ul>
+            <ul label="Юр. Информация" class="law-information information">
+              <li class="information-item"><a href="#" class="information-link">Политика конфиденциальности</a></li>
+              <li class="information-item"><a href="#" class="information-link">Правовая информация</a></li>
+            </ul>
+          </div> 
+        </div>
+        <!-- /.col-5 -->
+        <div class="col-2">
+            <div class="social-media">
+              <div class="social-title">Социальные сети</div>
+              <div class="social-media-links">
+                <a href="#" class="social-media-link">
+                  <img src="/images/img/yt.svg" alt="Icon: YouTube" class="social-icon">
+                </a>
+                <a href="#" class="social-media-link">
+                  <img src="/images/img/inst.svg" alt="Icon: Instagram" class="social-icon">
+                </a>
+              </div>
+            </div>
+            <!-- /.social-media -->
+        </div>
+        <!-- /.col-2 -->
+        <div class="col-3">
+          <div class="phone">
+            <div class="phone-title">Контакты</div>
+            <div class="phone-nums">
+              <a href="tel: 88008989889" class="phone-num">8 800 898 98 89,</a>
+              <a href="tel: +74998989889" class="phone-num">+7 499 989 98 89</a>
+            </div>
+            <!-- /.phone-nums -->
+          </div>
+          <!-- /.phone-num -->
+          <a href="#" class="phone-link primary-link">Связать с нами</a>
+          <div class="bank-cards">
+            <img src="/images/img/mastercard.svg" alt="Icon: MasterCard" class="bank-card">
+            <img src="/images/img/visa.svg" alt="Icon: Visa" class="bank-card">
+          </div>
+          <!-- /.bank-cards -->
+        </div>
+        <!-- /.col-3 -->
+      </div>
+      <!-- /.row -->    
+      </div>
+      <!-- /.footer-content -->
+      <hr class="footer-line">
+      <div class="copyright container">
+        <span class="copyright-text">© 2016-2020. Jazz STORE. Все права защищены</span>
+        <span class="made-by-text">Разработка сайта - <a href="devarto.ru" class="devarto-link">Devarto.ru</a></span>
+      </div> 
+    </footer>
    </div>
    <!-- /.page-root -->
 </body>
