--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
             <div class="phone-title">Контакты</div>
             <div class="phone-nums">
               <a href="tel: 88008989889" class="phone-num">8 800 898 98 89,</a>
-              <a href="tel: +74998989889" class="phone-num">+7 499 989 98 89</a>
+              <a href="tel: +74998989889" class="phone-num">&nbsp +7 499 989 98 89</a>
             </div>
             <!-- /.phone-nums -->
           </div>
