--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
    <div class="page-root">
     <header class="header container">
       <div class="row">
-          <div class="col-2">
+          <div class="col-md-2">
             <a href="/" class="logo">
               <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-images" />
             </a>
           </div>
-           <div class="col-8">
+           <div class="col-md-8">
             <nav class="nav-menu">
               <ul class="nav-list">
                 <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
@@ -34,7 +34,7 @@
               </ul>
             </nav>
            </div>
-          <div class="col-2">
+          <div class="col-md-2">
             <div class="link-group">
               <a href = "#" class="user-link primary-link">
                 <img src="/images/img/user.svg" alt="Icon: User" class="user-icon">
@@ -47,7 +47,7 @@
             </div>
             <!-- /.link-group -->
           </div>
-          <!-- /.col-2 -->
+          <!-- /.col-md-2 -->
         </div>
       <!-- /.row -->
     </header>
@@ -55,7 +55,7 @@
       <section class="banner section-yellow">
         <div class="container">
           <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
               <div class="banner-content">
                 <h1 class="banner-title">Santos Coffee BR</h1>
                 <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
@@ -84,7 +84,7 @@
               </div>
               <!-- banner-content -->
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
               <div class="banner-slider offset-2">
                 <img src="/images/img/banner-slider-image.png" alt="banner-slider-image" class="banner-slider-image">
               </div>
@@ -100,7 +100,7 @@
         <h2 class="brand-title">Мы создаем бренды!</h2>
         <div class="brand-cards">
           <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
               <div class="brand-card">
                 <div class="brand-card-header">
                   <img src="/images/img/brand-card-image-1.png" alt="Brand-Card-Image-1" class="brand-card-image">
@@ -132,8 +132,8 @@
               </div>
               <!-- /.brand-card -->
             </div>
-            <!-- /.col-6 -->
-            <div class="col-6">
+            <!-- /.col-md-6 -->
+            <div class="col-md-6">
               <div class="brand-card">
                 <div class="brand-card-header">
                   <img src="/images/img/brand-card-image-2.png" alt="Brand-Card-Image-1" class="brand-card-image">
@@ -165,7 +165,7 @@
               </div>
               <!-- /.brand-card -->
             </div>
-            <!-- /.col-6 -->
+            <!-- /.col-md-6 -->
           </div>
           <!-- /.row -->
           
@@ -175,7 +175,7 @@
       <!-- /.brands container -->
       <section class="promotion container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-md-6">
             <div class="promotion-info">
               <h2 class="promotion-title">Компания JAZZZ продвигает продукцию по системе Concept STORE</h2>
               <div class="advantages-title">Продукты европейского качества</div>
@@ -205,14 +205,14 @@
             </div>
             <!-- /.promotion-info -->
           </div>
-          <!-- /.col-6 -->
-          <div class="col-6">
+          <!-- /.col-md-6 -->
+          <div class="col-md-6">
             <a class="promotion-video" href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&t=1s" data-fancybox="video">
               <img src="/images/img/promotion-video.png" alt="Promotion video" class="promotion-video">
             </a>
             <!-- /.promotion-video -->
           </div>
-          <!-- /.col-6 -->
+          <!-- /.col-md-6 -->
         </div>
         <!-- /.row -->
       </section>
@@ -221,7 +221,7 @@
       <div class="products container">
         <div class="product-cards">
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-1.png" alt="Product-card-image" class="product-card-image">
@@ -257,8 +257,8 @@
               </div>
               <!-- /.product-card -->
             </div>
-            <!-- /.col-4 -->
-            <div class="col-4">
+            <!-- /.col-md-4 -->
+            <div class="col-md-4">
               <div class="product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-2.png" alt="Product-card-image" class="product-card-image">
@@ -294,8 +294,8 @@
               </div>
               <!-- /.product-card -->
             </div>
-            <!-- /.col-4 -->
-            <div class="col-4">
+            <!-- /.col-md-4 -->
+            <div class="col-md-4">
               <div class="product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-3.png" alt="Product-card-image" class="product-card-image">
@@ -331,7 +331,7 @@
               </div>
               <!-- /.product-card -->
             </div>
-            <!-- /.col-4 -->
+            <!-- /.col-md-4 -->
           </div>
           <!-- /.row -->
         </div>
@@ -340,13 +340,13 @@
       <!-- /.products -->
       <div class="business container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-md-6">
             <div style="display:flex; justify-content: flex-end;">
               <img src="/images/img/business.png" alt="Photo: business" class="business-image">
             </div>
           </div>
-          <!-- /.col-6 -->
-          <div class="col-6">
+          <!-- /.col-md-6 -->
+          <div class="col-md-6">
             <div class="business-content">
               <div class="business-title">Бизнес с Jazz-Holding</div>
               <p class="business-text">Сбалансируйте все сферы своей жизни став активным потребителем Jazz-Holding! Здоровый напитки, эко-продукты, органические продукты и возможность зарабатывать кэшбэк за рекомендацию нашего STORE.</p>
@@ -381,7 +381,7 @@
             </div>
             <!-- /.business-content -->
           </div>
-          <!-- /.col-6 -->
+          <!-- /.col-md-6 -->
         </div>
         <!-- /.row -->
       </div>
@@ -391,7 +391,7 @@
         <div class="success-title">Три шага на пути к успеху</div>
           <div class="success-cards">
             <div class="row">
-              <div class="col-4">
+              <div class="col-md-4">
                 <div class="success-card">
                   <img src="/images/img/success-icon-1.svg" alt="Icon: Success-icon" class="success-icon">
                   <p class="success-text">Совершайте любые покупки в Jazz-Holding со скидкой</p>
@@ -399,8 +399,8 @@
                 </div>
                 <!-- /.success-card -->    
               </div>
-              <!-- /.col-4 -->
-              <div class="col-4">
+              <!-- /.col-md-4 -->
+              <div class="col-md-4">
                 <div class="success-card">
                   <img src="/images/img/success-icon-2.svg" alt="Icon: Success-icon" class="success-icon">
                   <p class="success-text">Рекомендуйте Jazz-Holding, создавая личную команду активных потребителей</p>
@@ -408,8 +408,8 @@
                 </div>
                 <!-- /.success-card -->
               </div>
-              <!-- /.col-4 -->
-              <div class="col-4">
+              <!-- /.col-md-4 -->
+              <div class="col-md-4">
                 <div class="success-card">
                   <img src="/images/img/success-icon-3.svg" alt="Icon: Success-icon" class="success-icon">
                   <p class="success-text">Станьте Экспертом бренда, получая пассивный доход и щедрые подарки
@@ -418,7 +418,7 @@
                 </div>
                 <!-- /.success-card -->
               </div>
-              <!-- /.col-4 -->
+              <!-- /.col-md-4 -->
             </div>
             <!-- /.row -->
           </div>
@@ -433,7 +433,7 @@
         <div class="reliability-subtitle">Благодаря использованию блокчейн-платформы, мы позаботились о том, чтобы каждый наш партнер получил обещанные вознаграждения!</div>
         <div class="reliability-cards">
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="reliability-card reliability-card-left">
                 <div class="reliability-card-text">Сохранность и неизменность
                   внесенной информации</div>
@@ -447,8 +447,8 @@
               </div>
               <!-- /.reliability-card -->
             </div>
-            <!-- /.col-4 -->
-            <div class="col-4">
+            <!-- /.col-md-4 -->
+            <div class="col-md-4">
               <img src="images/img/logo-lg.png" alt="Logo: Jazz" class="logo-lg">
               <div class="reliability-card reliability-card-right">
                 <div class="reliability-card-text order-2">Защита от любых мошеннических действий</div>
@@ -457,8 +457,8 @@
               <!-- /.reliability-card -->
               <a href="#" class="reliability-link primary-link">Присоединиться</a>
             </div>
-            <!-- /.col-4 -->
-            <div class="col-4">
+            <!-- /.col-md-4 -->
+            <div class="col-md-4">
               <div class="reliability-card reliability-card-right">
                 <div class="reliability-card-text order-2">Исполнение всех
                   обязательств и выплат</div>
@@ -472,7 +472,7 @@
               </div>
               <!-- /.reliability-card -->
             </div>
-            <!-- /.col-4 -->
+            <!-- /.col-md-4 -->
           </div>
           <!-- /.row -->
         </div>
@@ -483,25 +483,25 @@
         <div class="news-title">Последние новости</div>
         <div class="news-cards">
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-4">
               <img src="/images/img/news-image-1.png" alt="News-imaage-1" class="news-image">
               <div class="news-date">29 Ноября 2020г</div>
               <div class="news-text">Лучшие кофейные открытия Москвы в ноябре</div>
             </div>
-            <!-- /.col-4 -->
-            <div class="col-4">
+            <!-- /.col-md-4 -->
+            <div class="col-md-4">
               <img src="/images/img/news-image-2.png" alt="News-imaage-2" class="news-image">
               <div class="news-date">29 Ноября 2020г</div>
               <div class="news-text">Интервью с Шота Битадзе: всё о грузинском фермерском чае</div>
               <a href="#" class="news-link primary-link">Все новости</a>
             </div>
-            <!-- /.col-4 -->
-            <div class="col-4">
+            <!-- /.col-md-4 -->
+            <div class="col-md-4">
               <img src="/images/img/news-image-3.png" alt="News-imaage-3" class="news-image">
               <div class="news-date">29 Ноября 2020г</div>
               <div class="news-text">Объявлены Чемпионаты мира по кофе, которые состоятся на Тайване</div>
             </div>
-            <!-- /.col-4 -->
+            <!-- /.col-md-4 -->
           </div>
           <!-- /.row -->
         </div>
@@ -512,15 +512,15 @@
     <footer class="footer">
       <div class="container footer-content">
       <div class="row">
-        <div class="col-2">
+        <div class="col-md-2">
           <div class="footer-logo">
             <a href="/" class="logo"><img src="/images/img/logo-footer.png" alt="Logo: Jazz" class="footer-logo-image"></a>
             <div class="footer-logo-text">Jazz STORE - </br>Все лучшее людям!</div>
           </div>
           <!-- /.footer-logo -->
         </div>
-        <!-- /.col-2 -->
-        <div class="col-5">
+        <!-- /.col-md-2 -->
+        <div class="col-md-5">
           <div class="footer-information">
             <ul label="Информация" class="information">
               <li class="information-item"><a href="#" class="information-link">О нас</a></li>
@@ -535,8 +535,8 @@
             </ul>
           </div> 
         </div>
-        <!-- /.col-5 -->
-        <div class="col-2">
+        <!-- /.col-md-5 -->
+        <div class="col-md-2">
             <div class="social-media">
               <div class="social-title">Социальные сети</div>
               <div class="social-media-links">
@@ -550,8 +550,8 @@
             </div>
             <!-- /.social-media -->
         </div>
-        <!-- /.col-2 -->
-        <div class="col-3">
+        <!-- /.col-md-2 -->
+        <div class="col-md-3">
           <div class="phone">
             <div class="phone-title">Контакты</div>
             <div class="phone-nums">
@@ -568,7 +568,7 @@
           </div>
           <!-- /.bank-cards -->
         </div>
-        <!-- /.col-3 -->
+        <!-- /.col-md-3 -->
       </div>
       <!-- /.row -->    
       </div>
