--- a/index.html
+++ b/index.html
@@ -106,29 +106,30 @@
                   <img src="/images/img/brand-card-image-1.png" alt="Brand-Card-Image-1" class="brand-card-image">
                 </div>
                 <!-- /.brand-card-header -->
-                <div class="brand-card-info">
-                  <div class="brand-card-title">JazzLife</div>
-                  <p class="brand-card-text">Собственное производство экологичных продуктов для дома</p>
-                  <div class="brand-cards-benefits">
-                    <div class="brand-card-benefit">
-                      <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="brand-card-icon">
-                      <span class="brand-icon-text">Органический состав</span>
-                    </div>
-                    <div class="brand-card-benefit">
-                      <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="brand-card-icon">
-                      <span class="brand-icon-text">Эффективная формула</span>
-                    </div>
-                    <div class="brand-card-benefit">
-                      <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="brand-card-icon">
-                      <span class="brand-icon-text">Европейское качество</span>
-                    </div>
+                <div class="brand-card-title">JazzLife</div>
+                  <div class="brand-card-text">Собственное производство экологичных продуктов для дома
                   </div>
-                  <!-- /.brand-cards-benefits -->
-                </div>
-                <!-- /.brand-card-info -->
-                <a href="#" class="brand-card-link primary-link">
-                  Перейти в магазин
-                </a>
+                  <div class="brand-card-wrapper">
+                    <div class="brand-cards-benefits">
+                      <div class="brand-card-benefit">
+                        <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="brand-card-icon">
+                        <span class="brand-icon-text">Органический состав</span>
+                      </div>
+                      <div class="brand-card-benefit">
+                        <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="brand-card-icon">
+                        <span class="brand-icon-text">Эффективная формула</span>
+                      </div>
+                      <div class="brand-card-benefit">
+                        <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="brand-card-icon">
+                        <span class="brand-icon-text">Европейское качество</span>
+                      </div>
+                    </div>
+                    <!-- /.brand-cards-benefits -->
+                    <a href="#" class="brand-card-link primary-link">
+                      Перейти в магазин
+                    </a>
+                  </div>
+                  <!-- /.brand-card-wrapper --> 
               </div>
               <!-- /.brand-card -->
             </div>
@@ -139,36 +140,35 @@
                   <img src="/images/img/brand-card-image-2.png" alt="Brand-Card-Image-1" class="brand-card-image">
                 </div>
                 <!-- /.brand-card-header -->
-                <div class="brand-card-info">
-                  <div class="brand-card-title">JazzTop</div>
-                  <p class="brand-card-text">Создаем эко-продукты для полноценного питания, здоровья и красоты</p>
-                  <div class="brand-cards-benefits">
-                    <div class="brand-card-benefit">
-                      <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="brand-card-icon">
-                      <span class="brand-icon-text">Органический состав</span>
+                <div class="brand-card-title">JazzTop</div>
+                  <div class="brand-card-text">Создаем эко-продукты для полноценного питания, здоровья и красоты</div>
+                  <div class="brand-card-wrapper">
+                    <div class="brand-cards-benefits">
+                      <div class="brand-card-benefit">
+                        <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="brand-card-icon">
+                        <span class="brand-icon-text">Органический состав</span>
+                      </div>
+                      <div class="brand-card-benefit">
+                        <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="brand-card-icon">
+                        <span class="brand-icon-text">Эффективная формула</span>
+                      </div>
+                      <div class="brand-card-benefit">
+                        <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="brand-card-icon">
+                        <span class="brand-icon-text">Европейское качество</span>
+                      </div>
                     </div>
-                    <div class="brand-card-benefit">
-                      <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="brand-card-icon">
-                      <span class="brand-icon-text">Эффективная формула</span>
-                    </div>
-                    <div class="brand-card-benefit">
-                      <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="brand-card-icon">
-                      <span class="brand-icon-text">Европейское качество</span>
-                    </div>
+                    <!-- /.brand-cards-benefits -->
+                    <a href="#" class="brand-card-link primary-link">
+                      Перейти в магазин
+                    </a>
                   </div>
-                  <!-- /.brand-cards-benefits -->
-                </div>
-                <!-- /.brand-card-info -->
-                <a href="#" class="brand-card-link primary-link">
-                  Перейти в магазин
-                </a>
+                  <!-- /.brand-card-wrapper -->
               </div>
               <!-- /.brand-card -->
             </div>
             <!-- /.col-md-6 -->
           </div>
           <!-- /.row -->
-          
         </div>
         <!-- /.brand-cards -->           
       </section>
@@ -227,33 +227,33 @@
                   <img src="/images/img/product-card-image-1.png" alt="Product-card-image" class="product-card-image">
                 </div>
                 <!-- /.product-card-header -->
-                <div class="product-card-content">
-                  <div class="product-card-title offset-1">Свежеобжаренный Кофе Ethiopia Israel Degfa</div>
+                <div class="product-card-title offset-1">Свежеобжаренный Кофе Ethiopia Israel Degfa</div>
+                <div class="product-wrapper">
+                  <div class="product-dropdown">
+                    <select class="select">   
+                     <option selected>Масса: 250 гр. - 4 400 рублей</option>  
+                     <option>Масса: 250 гр. - 4 400 рублей</option>   
+                     <option>Масса: 250 гр. - 4 400 рублей</option>  
+                     <option>Масса: 250 гр. - 4 400 рублей</option>  
+                     <option>Масса: 250 гр. - 4 400 рублей</option> 
+                    </select> 
+                   </div>
+                 <!-- /.product-dropdown -->
+                 <div class="product-buy">
+                   <span class="price-text">Цена:</span>
+                   <span class="price">4 400.00 ₽</span>
+                   <div class="amount">
+                     <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="minus-icon"></div>
+                     <div class="num">1</div>
+                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="plus-icon"></div>
+                   </div>
+                   <a href="#" class="buy-link primary-link">
+                     В корзину
+                   </a>
+                 </div>
+                 <!-- /.product-buy -->
                 </div>
-                <!-- /.product-card-content -->
-                <div class="product-dropdown">
-                   <select class="select">   
-                    <option selected>Масса: 250 гр. - 4 400 рублей</option>  
-                    <option>Масса: 250 гр. - 4 400 рублей</option>   
-                    <option>Масса: 250 гр. - 4 400 рублей</option>  
-                    <option>Масса: 250 гр. - 4 400 рублей</option>  
-                    <option>Масса: 250 гр. - 4 400 рублей</option> 
-                   </select> 
-                  </div>
-                <!-- /.product-dropdown -->
-                <div class="product-buy">
-                  <span class="price-text">Цена:</span>
-                  <span class="price">4 400.00 ₽</span>
-                  <div class="amount">
-                    <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="minus-icon"></div>
-                    <div class="num">1</div>
-                    <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="plus-icon"></div>
-                  </div>
-                  <a href="#" class="buy-link primary-link">
-                    В корзину
-                  </a>
-                </div>
-                <!-- /.product-buy -->
+                <!-- /.product-wrapper -->
               </div>
               <!-- /.product-card -->
             </div>
@@ -264,33 +264,33 @@
                   <img src="/images/img/product-card-image-2.png" alt="Product-card-image" class="product-card-image">
                 </div>
                 <!-- /.product-card-header -->
-                <div class="product-card-content">
-                  <div class="product-card-title offset-1">Свежеобжаренный Кофе Kenya Gathaithi AB</div>
+                <div class="product-card-title offset-1">Свежеобжаренный Кофе Kenya Gathaithi AB</div>
+                <div class="product-wrapper">
+                  <div class="product-dropdown">
+                    <select class="select">   
+                     <option selected>Масса: 250 гр. - 4 800 рублей</option>  
+                     <option>Масса: 250 гр. - 4 800 рублей</option>   
+                     <option>Масса: 250 гр. - 4 800 рублей</option>  
+                     <option>Масса: 250 гр. - 4 800 рублей</option>  
+                     <option>Масса: 250 гр. - 4 800 рублей</option> 
+                    </select> 
+                  </div>
+                 <!-- /.product-dropdown -->
+                 <div class="product-buy">
+                  <span class="price-text">Цена:</span>
+                  <span class="price">4 800.00 ₽</span>
+                  <div class="amount">
+                    <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="minus-icon"></div>
+                    <div class="num">1</div>
+                    <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="plus-icon"></div>
+                  </div>
+                  <a href="#" class="buy-link primary-link">
+                    В корзину
+                  </a>
                 </div>
-                <!-- /.product-card-content -->
-                <div class="product-dropdown">
-                  <select class="select">   
-                   <option selected>Масса: 250 гр. - 4 800 рублей</option>  
-                   <option>Масса: 250 гр. - 4 800 рублей</option>   
-                   <option>Масса: 250 гр. - 4 800 рублей</option>  
-                   <option>Масса: 250 гр. - 4 800 рублей</option>  
-                   <option>Масса: 250 гр. - 4 800 рублей</option> 
-                  </select> 
+                <!-- /.product-buy -->
                 </div>
-               <!-- /.product-dropdown -->
-               <div class="product-buy">
-                <span class="price-text">Цена:</span>
-                <span class="price">4 800.00 ₽</span>
-                <div class="amount">
-                  <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="minus-icon"></div>
-                  <div class="num">1</div>
-                  <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="plus-icon"></div>
-                </div>
-                <a href="#" class="buy-link primary-link">
-                  В корзину
-                </a>
-              </div>
-              <!-- /.product-buy -->
+                <!-- /.product-wrapper -->
               </div>
               <!-- /.product-card -->
             </div>
@@ -301,33 +301,33 @@
                   <img src="/images/img/product-card-image-3.png" alt="Product-card-image" class="product-card-image">
                 </div>
                 <!-- /.product-card-header -->
-                <div class="product-card-content">
-                  <div class="product-card-title offset-1">Свежеобжаренный Кофе Espresso Ethiopia Guji Deba</div>
+                <div class="product-card-title offset-1">Свежеобжаренный Кофе Espresso Ethiopia Guji Deba</div>
+                <div class="product-wrapper">
+                  <div class="product-dropdown">
+                    <select class="select">   
+                     <option selected>Масса: 250 гр. - 9 800 рублей</option>  
+                     <option>Масса: 250 гр. - 9 800 рублей</option>   
+                     <option>Масса: 250 гр. - 9 800 рублей</option>  
+                     <option>Масса: 250 гр. - 9 800 рублей</option>  
+                     <option>Масса: 250 гр. - 9 800 рублей</option> 
+                    </select> 
+                  </div>
+                 <!-- /.product-dropdown -->
+                 <div class="product-buy">
+                  <span class="price-text">Цена:</span>
+                  <span class="price">9 800.00 ₽</span>
+                  <div class="amount">
+                    <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="minus-icon"></div>
+                    <div class="num">1</div>
+                    <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="plus-icon"></div>
+                  </div>
+                  <a href="#" class="buy-link primary-link">
+                    В корзину
+                  </a>
                 </div>
-                <!-- /.product-card-content -->
-                <div class="product-dropdown">
-                  <select class="select">   
-                   <option selected>Масса: 250 гр. - 9 800 рублей</option>  
-                   <option>Масса: 250 гр. - 9 800 рублей</option>   
-                   <option>Масса: 250 гр. - 9 800 рублей</option>  
-                   <option>Масса: 250 гр. - 9 800 рублей</option>  
-                   <option>Масса: 250 гр. - 9 800 рублей</option> 
-                  </select> 
+                <!-- /.product-buy -->
                 </div>
-               <!-- /.product-dropdown -->
-               <div class="product-buy">
-                <span class="price-text">Цена:</span>
-                <span class="price">9 800.00 ₽</span>
-                <div class="amount">
-                  <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="minus-icon"></div>
-                  <div class="num">1</div>
-                  <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="plus-icon"></div>
-                </div>
-                <a href="#" class="buy-link primary-link">
-                  В корзину
-                </a>
-              </div>
-              <!-- /.product-buy -->
+                <!-- /.product-wrapper -->
               </div>
               <!-- /.product-card -->
             </div>
@@ -576,7 +576,7 @@
       <hr class="footer-line">
       <div class="copyright container">
         <span class="copyright-text">© 2016-2020. Jazz STORE. Все права защищены</span>
-        <span class="made-by-text">Разработка сайта - <a href="devarto.ru" class="devarto-link">Devarto.ru</a></span>
+        <span class="made-by-text">Разработка сайта - <a href="https://devarto.ru/" target="_blank" class="devarto-link">Devarto.ru</a></span>
       </div> 
     </footer>
    </div>
