--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
               </div>
               <!-- /.banner-slider -->
             </div>
+            <!-- /.col-md-6 -->
           </div>
           <!-- /.row -->
         </div>
@@ -582,5 +583,8 @@
    </div>
    <!-- /.page-root -->
    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script src="/images/js/slick.min.js"></script>
+   <script src="/images/js/script.js"></script>
 </body>
 </html>
