--- a/index.html
+++ b/index.html
@@ -54,45 +54,135 @@
     <main>
       <section class="banner section-yellow">
         <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="banner-content">
-                <h1 class="banner-title">Santos Coffee BR</h1>
-                <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
-                <p class="banner-text">Источник белка, аминокислот и витаминов, необходимых для ежедневного потребления</p>
-                <div class="banner-cards">
-                  <div class="banner-card">
-                    <img src="/images/img/banner-icon-1.svg" alt="banner-icon-1" class="banner-card-icon">
-                    <span class="banner-card-text">Поможет сжечь лишний жир</span>
+          <div class="slider">
+            <div class="slider-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="banner-content">
+                    <h1 class="banner-title">Santos Coffee BR</h1>
+                    <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
+                    <p class="banner-text">Источник белка, аминокислот и витаминов, необходимых для ежедневного потребления</p>
+                    <div class="banner-cards">
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-1.svg" alt="banner-icon-1" class="banner-card-icon">
+                        <span class="banner-card-text">Поможет сжечь лишний жир</span>
+                      </div>
+                      <!-- /.banner-card -->
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-2.svg" alt="banner-icon-2" class="banner-card-icon">
+                        <span class="banner-card-text">Увеличивает физическую работоспособность</span>
+                      </div>
+                      <!-- /.banner-card -->
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-3.svg" alt="banner-icon-3" class="banner-card-icon">
+                        <span class="banner-card-text">Успешно борется с депрессией</span>
+                      </div>
+                      <!-- /.banner-card -->
+                    </div>
+                    <!-- /.banner-cards -->
+                    <a href="#" class="banner-link primary-link">
+                      Подробнее о продукте
+                    </a>
                   </div>
-                  <!-- /.banner-card -->
-                  <div class="banner-card">
-                    <img src="/images/img/banner-icon-2.svg" alt="banner-icon-2" class="banner-card-icon">
-                    <span class="banner-card-text">Увеличивает физическую работоспособность</span>
-                  </div>
-                  <!-- /.banner-card -->
-                  <div class="banner-card">
-                    <img src="/images/img/banner-icon-3.svg" alt="banner-icon-3" class="banner-card-icon">
-                    <span class="banner-card-text">Успешно борется с депрессией</span>
-                  </div>
-                  <!-- /.banner-card -->
+                  <!-- banner-content -->
                 </div>
-                <!-- /.banner-cards -->
-                <a href="#" class="banner-link primary-link">
-                  Подробнее о продукте
-                </a>
+                <div class="col-md-6">
+                  <div class="banner-slider offset-2">
+                    <img src="/images/img/banner-slider-image.png" alt="banner-slider-image" class="banner-slider-image">
+                  </div>
+                  <!-- /.banner-slider -->
+                </div>
+                <!-- /.col-md-6 -->
               </div>
-              <!-- banner-content -->
+              <!-- /.row -->
             </div>
-            <div class="col-md-6">
-              <div class="banner-slider offset-2">
-                <img src="/images/img/banner-slider-image.png" alt="banner-slider-image" class="banner-slider-image">
+            <!-- /.slider-item -->
+            <div class="slider-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="banner-content">
+                    <h1 class="banner-title">Santos Coffee BR</h1>
+                    <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
+                    <p class="banner-text">Источник белка, аминокислот и витаминов, необходимых для ежедневного потребления</p>
+                    <div class="banner-cards">
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-1.svg" alt="banner-icon-1" class="banner-card-icon">
+                        <span class="banner-card-text">Поможет сжечь лишний жир</span>
+                      </div>
+                      <!-- /.banner-card -->
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-2.svg" alt="banner-icon-2" class="banner-card-icon">
+                        <span class="banner-card-text">Увеличивает физическую работоспособность</span>
+                      </div>
+                      <!-- /.banner-card -->
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-3.svg" alt="banner-icon-3" class="banner-card-icon">
+                        <span class="banner-card-text">Успешно борется с депрессией</span>
+                      </div>
+                      <!-- /.banner-card -->
+                    </div>
+                    <!-- /.banner-cards -->
+                    <a href="#" class="banner-link primary-link">
+                      Подробнее о продукте
+                    </a>
+                  </div>
+                  <!-- banner-content -->
+                </div>
+                <div class="col-md-6">
+                  <div class="banner-slider offset-2">
+                    <img src="/images/img/banner-slider-image.png" alt="banner-slider-image" class="banner-slider-image">
+                  </div>
+                  <!-- /.banner-slider -->
+                </div>
+                <!-- /.col-md-6 -->
               </div>
-              <!-- /.banner-slider -->
+              <!-- /.row -->
             </div>
-            <!-- /.col-md-6 -->
+            <!-- /.slider-item -->
+            <div class="slider-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="banner-content">
+                    <h1 class="banner-title">Santos Coffee BR</h1>
+                    <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
+                    <p class="banner-text">Источник белка, аминокислот и витаминов, необходимых для ежедневного потребления</p>
+                    <div class="banner-cards">
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-1.svg" alt="banner-icon-1" class="banner-card-icon">
+                        <span class="banner-card-text">Поможет сжечь лишний жир</span>
+                      </div>
+                      <!-- /.banner-card -->
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-2.svg" alt="banner-icon-2" class="banner-card-icon">
+                        <span class="banner-card-text">Увеличивает физическую работоспособность</span>
+                      </div>
+                      <!-- /.banner-card -->
+                      <div class="banner-card">
+                        <img src="/images/img/banner-icon-3.svg" alt="banner-icon-3" class="banner-card-icon">
+                        <span class="banner-card-text">Успешно борется с депрессией</span>
+                      </div>
+                      <!-- /.banner-card -->
+                    </div>
+                    <!-- /.banner-cards -->
+                    <a href="#" class="banner-link primary-link">
+                      Подробнее о продукте
+                    </a>
+                  </div>
+                  <!-- banner-content -->
+                </div>
+                <div class="col-md-6">
+                  <div class="banner-slider offset-2">
+                    <img src="/images/img/banner-slider-image.png" alt="banner-slider-image" class="banner-slider-image">
+                  </div>
+                  <!-- /.banner-slider -->
+                </div>
+                <!-- /.col-md-6 -->
+              </div>
+              <!-- /.row -->
+            </div>
+            <!-- /.slider-item -->
           </div>
-          <!-- /.row -->
+          <!-- /.slider -->
         </div>
         <!-- /.container -->
       </section>
